User Profile 게시글 제외 기본 정보 로드 구현

--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -19,42 +19,7 @@
                 <div class="user-profile-main-div">
                     <div class="profile-header-div">
                         <div class="user-information-main-div">
-                            <div class="user-image-div">
-                                <img src="/static/image/profiles/Jordy.png" alt="프로필">
-                            </div>
-                            <div class="user-information-div">
-                                <div class="nickname-and-option-div">
-                                    <div>
-                                        <span class="nickname-span">dae._gyeong</span>
-                                    </div>
-                                    <div>
-                                        <button class="profile-edit-button" type="button">프로필 편집</button>
-                                    </div>
-                                    <div>
-                                        <i class="fa-solid fa-gear setting-button"></i>
-                                    </div>
-                                </div>
-                                <div class="board-and-follow-div">
-                                    <div class="board-information-div">
-                                        <span>게시물</span>
-                                        <span class="board-span">0</span>
-                                    </div>
-                                    <div class="follower-information-div">
-                                        <span>팔로워</span>
-                                        <span class="follower-span">123</span>
-                                    </div>
-                                    <div class="following-information-div">
-                                        <span>팔로우</span>
-                                        <span class="following-span">200</span>
-                                    </div>
-                                </div>
-                                <div class="user-name-div">
-                                    <span class="user-name-span">한대경</span>
-                                </div>
-                                <div class="introduce-div">
-                                    <span class="introduce-span">안녕하세요.</span>
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="highlight-main-div">
                             <div class="add-highlight-div">
@@ -64,25 +29,23 @@
                                 <p class="notice-p">신규</p>
                             </div>
                             <div class="highlight-list-div">
-                                <div class="add-highlight-div">
-                                <div class="outer-border">
-                                    <img src="/static/image/profiles/Jordy.png" alt="">
+                                <!-- <div class="highlight-div">
+                                    <div class="outer-border">
+                                        <img src="/static/image/profiles/Jordy.png" alt="">
+                                    </div>
+                                    <p class="notice-p">~~~</p>
                                 </div>
-                                <p class="notice-p">~~~</p>
-                            </div>
+                                <div class="highlight-div">
+                                    <div class="outer-border">
+                                        <img src="/static/image/profiles/Jordy.png" alt="">
+                                    </div>
+                                    <p class="notice-p">~~~</p>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                     <div class="board-header-div">
-                        <div class="board-button-div">
-                            <span class="content-span">게시물</span>
-                        </div>
-                        <div class="saved-board-button-div">
-                            <span class="content-span">저장됨</span>
-                        </div>
-                        <div class="tag-button-div">
-                            <span class="content-span">태그됨</span>
-                        </div>
+                        
                     </div>
                     <div class="upload-board-div board-div visible">
                         <div class="image-div">
