--- a/src/main/resources/static/css/auth/profile.css
+++ b/src/main/resources/static/css/auth/profile.css
@@ -117,7 +117,7 @@ main {
     overflow: auto;
 }
 
-.add-highlight-div {
+.add-highlight-div, .highlight-div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,7 +126,7 @@ main {
     height: 130px;
 }
 
-.add-highlight-div .outer-border {
+.add-highlight-div .outer-border, .highlight-div .outer-border {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,7 +141,7 @@ main {
     overflow: hidden;
 }
 
-.add-highlight-div .outer-border img {
+.add-highlight-div .outer-border img, .highlight-div .outer-border img {
     width: 70px;
     height: 70px;
 }
@@ -151,6 +151,11 @@ main {
     font-weight: 600;
 
     color: #dbdbdb;
+}
+
+.highlight-list-div {
+    display: flex;
+    align-items: center;
 }
 
 .board-header-div {
