--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -47,7 +47,7 @@
                     <div class="board-header-div">
                         
                     </div>
-                    <div class="upload-board-div board-div visible">
+                    <div class="upload-board-list-div board-div visible">
                         <div class="image-div">
                             <div class="outer-div cursor">
                                 <i class="fa-solid fa-camera upload-board-button"></i>
@@ -61,8 +61,8 @@
                             <button class="upload-board-button" type="button">첫 사진 공유하기</button>
                         </div>
                     </div>
-                    <div class="saved-board-div board-div visible">
-                        <div class="image-div">
+                    <div class="saved-board-list-div board-div">
+                        <!-- <div class="image-div">
                             <div class="outer-div">
                                 <i class="fa-regular fa-bookmark"></i>
                             </div>
@@ -70,9 +70,23 @@
                         <div class="notice-div">
                             <h1 class="notice-h1">게시글 저장</h1>
                             <span class="notice-span">게시글을 저장하면 원하는 게시글을 볼 수 있습니다.</span>
+                        </div> -->
+                        <div class="saved-board-div load-board-div">
+                            <i class="fa-regular fa-clone"></i>
+                            <img src="/static/image/profiles/Jordy.png" alt="">
+                            <div class="load-board-modal-div visible">
+
+                            </div>
+                        </div>
+                        <div class="saved-board-div load-board-div">
+                            <i class="fa-solid fa-video"></i>
+                            <img src="/static/image/profiles/Jordy.png" alt="">
+                            <div class="load-board-modal-div visible">
+
+                            </div>
                         </div>
                     </div>
-                    <div class="tag-board-div board-div visible">
+                    <div class="tag-board-list-div board-div visible">
                         <div class="image-div">
                             <div class="outer-div">
                                 <i class="fa-solid fa-circle-user"></i>
