--- a/src/main/resources/templates/fragments/board.html
+++ b/src/main/resources/templates/fragments/board.html
@@ -7,7 +7,7 @@
     <link href="/static/css/style.css" rel="stylesheet">
     <link href="/static/css/fragments/board.css" rel="stylesheet">
 </head>
-<div class="main-modal-div visible">
+<div class="main-modal-div                        ">
     <div class="upload-picture-and-video-modal">
         <div class="modal-header-div">
             <button class="pre-button hidden" type="button">
@@ -97,7 +97,7 @@
                     </ul> -->
                 </div>
             </div>
-            <div class="content-div visible">
+            <div class="content-div                         ">
                 <div class="user-information-div">
                     <div class="user-image-div">
                         <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
@@ -157,6 +157,25 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="tag-search-result-modal-div">
+                        <ul>
+                            <li>
+                                <div class="detail-information-div">
+                                    <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                    <div class="user-information">
+                                        <span class="user-nickname-span">dae._gyeong</span>
+                                        <span class="user-name-span">한대경</span>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="location-tag-result-list-div">
+                                    <span class="tag-content-span">dae._gyeong</span>
+                                    <span class="tag-content-total-count-span">한대경</span>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="advanced-settings option">
