Validation ExceptionHandler 추가

--- a/src/main/resources/templates/fragments/board.html
+++ b/src/main/resources/templates/fragments/board.html
@@ -22,7 +22,7 @@
                     <form class="file-upload-form" enctype="multipart/form-data">
                         <img src="/static/image/images/upload-picture-and-video.png" alt="업로드 이미지">
                         <p class="notice-p">사진과 동영상을 여기에 끌어다 놓으세요.</p>
-                        <input id="file-input" class="file-input visible" name="file" type="file" accept=".jpg, .png, .jpeg, .mp4, .avi" multiple>
+                        <input id="file-input" class="file-input visible" name="file" type="file" accept="image/*, video/*" multiple>
                         <label class="select-file-label" for="file-input">컴퓨터에서 선택</label>
                     </form>
                     <!-- <div class="swiper-container swiper1">
