--- a/src/main/resources/static/css/fragments/board.css
+++ b/src/main/resources/static/css/fragments/board.css
@@ -115,7 +115,7 @@
 }
 
 .swiper-slide {
-    height: 784px;
+    /* height: 784px; */
 }
 
 .swiper-slide img {
@@ -133,7 +133,7 @@
 }
 
 .swiper-button-next {
-    left: 750px !important;
+    left: 740px !important;
 }
 
 .swiper-button-prev {
@@ -268,6 +268,7 @@
     right: 5px;
 
     cursor: pointer;
+    z-index: 1;
 
     background-color: rgba(26, 26, 26, .8);
 }
@@ -281,7 +282,7 @@
     font-size: 10px;
 }
 
-.uploaded-file-div img {
+.uploaded-file-div img, .uploaded-file-div video {
     width: 106px;
     height: 98px;
 
